# AI-BE-technical-assignment

./: .env_example  .gitignore  containers.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml
src/infrastructure/: pgvector.py
src/interface/: vector_store.py
src/llm_workflows/: state.py
src/llm_workflows/graphs/: company.py  graph.py
src/llm_workflows/nodes/company/: infer_tag.py  retriever.py
src/llm_workflows/states/: company.py  education.py  job.py  state.py
