[tool.poetry]
name = "searchright-technical-assignment"
version = "0.1.0"
description = ""
authors = ["Nuung <qlgks1@naver.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.9"
openai = "^1.75.0"

# LangChain
langchain-core = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.3"
langchain-text-splitters = "^0.3"
langchain-postgres = "^0.0.14"

# Postgres
psycopg = {extras = ["binary", "pool"], version = "^3.2.6"}

# LangGraph
langgraph = "^0.3.33"

# FastAPI
fastapi = "^0.115.12"
uvicorn = "^0.34.2"

# Utils
python-dotenv = "^1.0.1"
black = "^25.1.0"

# Test
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]